--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,11 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-    olikraus/U8g2@^2.35.19
+	olikraus/U8g2@^2.35.19
 	bblanchon/ArduinoJson@*
 	adafruit/Adafruit GFX Library@^1.11.9
 	arduino-libraries/NTPClient@^3.2.1
+	plerup/EspSoftwareSerial@^8.2.0
 monitor_speed = 9600
 build_flags = 
 	-Os
