--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,9 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
 	arduino-libraries/NTPClient@^3.2.1
 	plerup/EspSoftwareSerial@^8.2.0
-monitor_speed = 9600
+	madhephaestus/ESP32Servo@^3.0.5
+	adafruit/Adafruit PWM Servo Driver Library@^3.0.2
+monitor_speed = 115200
 build_flags = 
 	-Os
 	-DSPI_FREQUENCY=27000000
